Bring to Gitlab

--- a/config.org
+++ b/config.org
@@ -221,10 +221,11 @@ t means output to buffer."
 (setq doom-theme 'doom-dracula)
 ;; (load-theme 'afternoon t)
 #+end_src
+
 ** Org-mode visual
 #+begin_src emacs-lisp
 (defun dqv/org-mode-visual-fill ()
-  (setq visual-fill-column-width 120
+  (setq visual-fill-column-width 140
         visual-fill-column-center-text t
         )
   (visual-fill-column-mode 1)
@@ -390,8 +391,16 @@ Keybindings reference:
 #+begin_src emacs-lisp
 (map! :leader
       :n "SPC"  #'execute-extended-command
-      (:prefix ("d" . "Dir&Deletion")
-       :n    "d"    #'deft)
+      (:prefix ("d" . "Debugger")
+       :n    "r"   #'dap-debug
+       :n    "l"   #'dap-debug-last
+       :n    "R"   #'dap-debug-recent
+       :n    "x"   #'dap-disconnect
+       :n    "a"   #'dap-breakpoint-add
+       :n    "t"   #'dap-breakpoint-toggle
+       :n    "d"   #'dap-delete-session
+       :n    "D"   #'dap-delete-all-sessions
+       )
 
       (:prefix ("e" . "Exercise Coding Challenger")
        :n    "l"     #'leetcode
@@ -421,6 +430,7 @@ Keybindings reference:
       :nv "ls" #'+lsp/switch-client
       :nv "bR" #'rename-buffer
 
+      :nv "bx" #'doom/switch-to-scratch-buffer
       )
 #+end_src
 
